# AndroidDemo2

./: README  README.md
app/: build.gradle
app/src/androidTest/java/com/whulzz/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.json
app/src/main/cpp/: CMakeLists.txt  LibEntry.cpp
app/src/main/java/com/whulzz/demo/: DemoApplication.java  FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/java/com/whulzz/demo/test/: JsonTest.java  NativeUnwdTest.java  Test.java
app/src/main/java/com/whulzz/demo/utils/: FileUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/test/java/com/whulzz/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
include/backtrace/: CallStack.h
include/base/: ScopedBuffer.h  ScopedGuard.h  ScopedLocalUtfStr.h  ThreadPool.h  ThreadUtil.h  log.h  unique_fd.h
include/json/: version.h
src/lib_json/: CMakeLists.txt
src/libbacktrace/: Backtrace.cpp  BacktraceCurrent.cpp  BacktraceLog.h  BacktraceMap.cpp  CMakeLists.txt  CallStack.cpp
src/libbase/: CMakeLists.txt  file.cpp  logging.cpp
src/libbase/include/utils/: log.h
src/libunwind/: CMakeLists.txt
src/libunwind/include/: libunwind_i.h
src/libunwind/src/mi/: init.c
src/lzma/C/: CMakeLists.txt
